# Audiobook_reader

./: .gitignore  CMakeLists.txt  README.md
Audiobook_reader/: Audiobook_reader.pro  Audiobook_reader.pro.user.4.10-pre1  audiobook.cpp  audiobook.h  audiobookfile.cpp  audiobookfile.h  audiobooklist.cpp  audiobooklist.h  backend.cpp  backend.cpp.SaRnPl  backend.h  backend_old.cpp  backend_old.h  book.h  bookfile.cpp  globaljson.cpp  globaljson.h  main.cpp  main.qml  player (2).cpp  player (2).h  player.cpp  player.h  qml.qrc  qtquickcontrols2.conf
Audiobook_reader/Components/: Ass.qml  BookList.qml  ImageButton.qml  InfoPage.qml  OpenFolderDialog.qml  PlayButton.qml  Player.qml  Player2.qml  Playlist.qml  Settings.qml  SettingsButton.qml
Audiobook_reader/imports/Theme/: Theme.qml
Test_qt_stuff/: Makefile  Makefile.Debug  Makefile.Release  Test_qt_stuff.pro  main.cpp  player.cpp  player.h  utils.cpp  utils.h  wavfile.cpp  wavfile.h
audiobook_player/: CMakeLists.txt  template.txt
audiobook_player/src/: audiobook.cpp  audiobook.h  audiobookc.h  audiobookfile.cpp  audiobookfile.h  audiobookinfo.cpp  audiobookinfo.h  audiobooklist.cpp  audiobooklist.h  audiobooklistmodel.cpp  audiobooklistmodel.h  audiobookmodel.cpp  audiobookmodel.h  backend.cpp  backend.h  backend_old.cpp  filesizerequest.cpp  filesizerequest.h  globaljson.cpp  globaljson.h  main.cpp  main.qml  qpopka.cpp  qpopka.h  qtquickcontrols2.conf
audiobook_player/src/Components/: Ass.qml  BookList.qml  Playlist.qml
installer/: installer.nsi
nsound/: Nsound.h
project/: CMakeLists.txt
project/src/: audiobook.cpp  audiobooklist.h  book.cpp  bookfile.h  booklist.cpp  booklist.h  booklistmodel.cpp  booklistmodel.h  main.qml  player.cpp  player.h
project/src/Components/: BookList.qml  InfoPage.qml  SettingsButton.qml
project/src/imports/Theme/: Theme.qml
qt_console_test/: Makefile  Makefile.Debug  Makefile.Release  audiofilestream.cpp  audiofilestream.h  main.cpp  player.cpp  player.h  player2.cpp  player2.h  qt_console_test.pro
soundtouch_dll-2.1.1/: SoundTouchDLLD_x64.lib  SoundTouchDLL_x64.lib
src/: audiobook.cpp  audiobook.h  audiobookc.cpp  audiobookinfo.cpp  audiobooklist.cpp  audiobooklistmodel.cpp  audiobookmodel.cpp  audiobookmodel.h  backend.cpp  backend.cpp.autosave  backend.h  blheader.h  blwindow.cpp  blwindow.h  filesizerequest.cpp  filesizerequest.h  globaljson.cpp  globaljson.h  lib.cpp  lib.h  main.cpp  main.qml  pch.h  player.cpp  player.h  player2.cpp  player2.h  qtquickcontrols2.conf  res.qrc  res.rc
src/Components/: AppButton.qml  BookList.qml  ImageButton.qml  PlayButton.qml  Player2.qml  Playlist.qml
src/garbage/: blheader.cpp  blwindow.cpp  blwindow.h
src/imports/Theme/: Theme.qml
test1/: main.cpp
test_player/: Makefile  Makefile.Debug  Makefile.Release  main.cpp  mythread.cpp  mythread.h  player.cpp  player.h  test_player.pro
test_ui/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  audiostream.cpp  audiostream.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  test_ui.pro
